--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </li>
           <li>
             <a href="#"> </a>
-            <!-- facebook icon1  -->
+            <!-- facebook icon  -->
           </li>
           <li>
             <a href="#"> </a>
